combine karma templates, add tag_cloud, update list with scrolling, change request to bounty, init bounties section

--- a/parts/blocks.jade
+++ b/parts/blocks.jade
@@ -315,17 +315,17 @@ template(name='role_editor')
 
 template(name='author_info')
     with _author
-        a.ui.compact.basic.button(href="/u/#{username}")
+        a.ui.compact.basic.tertiary.button(href="/u/#{username}")
             if profile_image_id
                 img.ui.avatar.image(src="{{c.url profile_image_id width=100 height=100 gravity='face' crop='fill'}}")
             |by #{username}
             
 template(name='target_info')
     with target
-        a.ui.compact.basic.button(href="/u/#{username}")
+        a.ui.compact.basic.tertiary.button(href="/u/#{username}")
             if profile_image_id
                 img.ui.avatar.image(src="{{c.url profile_image_id width=100 height=100 gravity='face' crop='fill'}}")
-            |by #{username}
+            |to #{username}
 
 template(name='creation_info')
     .ui.small.inline.header #{when}
