--- a/parts/profile/profile.jade
+++ b/parts/profile/profile.jade
@@ -12,10 +12,10 @@ template(name='profile_layout')
                     .four.wide.column
                         span.mobile.only
                             a(href="/u/#{username}/")
-                                img.ui.centered.tiny.inline.spaced.image(src="{{c.url profile_image_id height=500 width=500 gravity='face' crop='fill'}}")
+                                img.ui.centered.tiny.inline.spaced.rounded.image(src="{{c.url profile_image_id height=500 width=500 gravity='face' crop='fill'}}")
                         span.mobile.hidden
                             a(href="/u/#{username}/")
-                                img.ui.centered.fluid.image(src="{{c.url profile_image_id height=500 width=500 gravity='face' crop='fill'}}") 
+                                img.ui.centered.fluid.rounded.image(src="{{c.url profile_image_id height=500 width=500 gravity='face' crop='fill'}}") 
                         a.ui.header.refresh_user_stats(href="/u/#{username}") 
                             |#{name}
                         // div
@@ -91,6 +91,9 @@ template(name='profile_layout')
                             a.ui.compact.button.select_term.no_blink(href="/u/#{username}/groups" class="{{isActiveRoute 'user_groups'}}" title="#{user.username} groups")
                                 i.users.large.icon
                                 span groups
+                            a.ui.compact.button.select_term.no_blink(href="/u/#{username}/bounties" class="{{isActiveRoute 'user_bounties'}}" title="#{user.username} bounties")
+                                i.hand.holding.large.icon
+                                span bounties
                             a.ui.compact.button.select_term.no_blink(href="/u/#{username}/friends" class="{{isActiveRoute 'user_friends'}}" title="#{user.username} friends")
                                 i.users.large.icon
                                 span friends
@@ -175,24 +178,40 @@ template(name='user_dashboard')
                                     a.like 
                                         i.like.icon
                 if currentUser
-                    .ui.header 
-                        i.chevron.up.icon
-                        |karma sent
-                    .ui.large.list
-                        each user_karma_sent
-                            .item #{title} #{amount} #{points} #{when}
-                                +target_info
-                    .ui.header 
-                        i.chevron.down.icon
-                        |karma received
-                    .ui.large.list
-                        each user_karma_received
-                            .item 
-                                .header #{points}: #{title}
-                                |#{description} #{amount} 
-                                .meta #{when}
-                                +author_info
-                
+                    .ui.two.column.stackable.grid
+                        .column
+                            a.ui.inline.spaced.header(href="/u/#{username}/debits")
+                                i.chevron.up.icon
+                                |karma sent
+                                |#{total_debit_amount}p
+                                // |sent
+                                small(title='debit count') (#{debit_count}x)
+                                small(title='rank') ##{global_debit_count_rank}
+                            each debit_tags
+                                .ui.small.basic.label #{title} 
+                                    // small #{count}
+                            .ui.list.selection.animated.smallscroll
+                                each user_karma_sent
+                                    a.item(href="/debit/#{_id}/view") #{title} #{amount} #{points} #{when}, #{description}
+                                        +target_info
+                        .column
+                            a.ui.inline.header(href="/u/#{username}/credits")
+                                i.chevron.down.large.icon
+                                |karma received
+                                |#{total_credit_amount}p
+                                // |received
+                                small(title='received count') (#{credit_count}x) 
+                                small(title='rank') ##{global_credit_count_rank}
+                            each credit_tags
+                                .ui.small.basic.label #{title}
+                            .ui.selection.animated.list.smallscroll
+                                each user_karma_received
+                                    a.item(href="/debit/#{_id}/view")
+                                        .header #{points}: #{title}
+                                        |#{description} #{amount} 
+                                        small #{when}
+                                        +author_info
+                        
                     // .ui.small.header 
                     //     label goto/create group
                     // .ui.input
@@ -243,36 +262,6 @@ template(name='user_dashboard')
                         each tips
                             +user_tip_small
         .three.column.row
-            .column
-                a.ui.inline.header(href="/u/#{username}/credits")
-                    i.chevron.down.large.icon
-                    |#{total_credit_amount}p
-                    // |received
-                    small(title='received count') (#{credit_count}x) 
-                    small(title='rank') ##{global_credit_count_rank}
-                i.tags.icon(title='credit tags')
-                each credit_tags
-                    .ui.small.basic.label #{title}
-                        // small #{count}
-                // .medscroll.ui.segments
-                //     each user_credits
-                //         +user_credit_segment
-            .column
-                a.ui.inline.spaced.header(href="/u/#{username}/debits")
-                    i.chevron.up.icon
-                    |#{total_debit_amount}p
-                    // |sent
-                    small(title='debit count') (#{debit_count}x)
-                    small(title='rank') ##{global_debit_count_rank}
-                i.tags.icon(title='credit tags')
-                each debit_tags
-                    .ui.small.basic.label #{title} 
-                        // small #{count}
-    
-                div
-                // .medscroll.ui.segments
-                //     each user_debits
-                //         +user_debit_segment
             .column
                 +user_bookmarks_widget
 
@@ -338,6 +327,27 @@ template(name='user_tips')
                 .content
                     .header #{parent.title} 
                     .header #{amount} 
+                    |#{parent.when} #{when}
+                    each parent.seven_tags
+                        .ui.mini.basic.label #{this}
+
+
+
+template(name='user_bounties')
+    .ui.header 
+        i.donate.icon
+        |bounties
+    .ui.link.list.scrolling
+        each bounties
+            a.ui.item(href="/p/#{parent_id}") 
+                if parent.image_id
+                    a(href="/p/#{_id}")
+                        img.ui.small.image(src="{{c.url image_id }}" class=currentUser.invert_class)
+                if parent.image_link
+                    img(src=parent.image_link)
+                .content
+                    .header #{parent.title} 
+                    .header #{karma} 
                     |#{parent.when} #{when}
                     each parent.seven_tags
                         .ui.mini.basic.label #{this}
