--- a/parts/profile/user_credit.jade
+++ b/parts/profile/user_credit.jade
@@ -17,7 +17,7 @@ template(name='user_credit')
                         a(href="/u/#{recipient.username}")
                             |#{recipient.username}
                         .content
-                            a(href="/m/dollar_debit/#{_id}/view")
+                            a(href="/dollar_debit/#{_id}/view")
                                 |#{when} 
                             .description
                                 |#{description}
@@ -37,7 +37,7 @@ template(name='user_credit')
                         a(href="/u/#{recipient.username}")
                             |#{recipient.username}
                         .content
-                            a(href="/m/dollar_debit/#{_id}/view")
+                            a(href="/dollar_debit/#{_id}/view")
                                 |#{when} 
                             .description
                                 |#{description}
