--- a/parts/profile/user_credits.jade
+++ b/parts/profile/user_credits.jade
@@ -14,7 +14,7 @@ template(name='user_credits')
         
     .ui.stackable.cards.scrolling
         each user_credits
-            a.ui.card(href="/m/debit/#{_id}/view")
+            a.ui.card(href="/debit/#{_id}/view")
                 .content
                     .header
                         strong #{amount}pt 
